--- a/HTML5_AND_CSS3/16-10.html
+++ b/HTML5_AND_CSS3/16-10.html
@@ -60,8 +60,23 @@
         </div>
     </div>
 </div>
-<script>
-
-</script>
+<div class="container">
+    <div class="test">陕西凯锐信息有限责任公司！陕西凯锐信息有限责任公司 陕西凯锐信息有限责任公司! </div>
+</div>
+<style>
+    .container{
+        border:1px solid #99251c;
+        margin: 10px auto;
+    }
+    .test {
+        width: 150px;
+        border:1px solid #0000ff;
+        max-height:42px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-text-overflow:ellipsis;
+        white-space: nowrap;
+    }
+</style>
 </body>
 </html>
