--- a/Prefessional_JavaScript_3th/test.html
+++ b/Prefessional_JavaScript_3th/test.html
@@ -13,8 +13,14 @@
     <div id="output">
 
     </div>
+    <div id="droptarget" style="width:300px;height:300px;background-color:blue"></div>
+    <form>
+        <progress id="progress"></progress>
+        <input type="file" id="files-list">
+    </form>
+
     <script src="13.js"></script>
-    <!--<script src="22.js"></script>-->
+    <script src="22.js"></script>
 </body>
 
 </html>
