--- a/Head_First_PHP&MySQL/1.1.html
+++ b/Head_First_PHP&MySQL/1.1.html
@@ -12,21 +12,21 @@
     <p>
         Share you story of alien abduction:
     </p>
-    <form action="mailto:geront@126.com" method="post">
+    <form action="./report.php" method="post">
         <label for="firstname">First name:</label>
         <input type="text" id="firstname" name="firstname"> <br>
         <label for="lastname">Last name:</label>
         <input type="text" id="lastname" name="lastname"> <br/>
         <label for="email">What is your email address?</label>
         <input type="text" name="email" id="email"><br>
-        <label for="whenithappen"> When did it happen? </label>
+        <label for="whenithappened"> When did it happen? </label>
         <input type="text" id="whenithapen" name="whenithappen"><br>
         <label for="howlong"> How long ware you gone? </label>
         <input type="text" id="howlong" name="howlong"><br>
         <label for="howmany">How many did you see?</label>
         <input type="text" id="howmany" name="howmany"><br>
         <label for="aliendescription">Describe them:</label>
-        <input type="text" id="aliendescription" name="aliendescription"><br>
+        <input type="text" id="description" name="description"><br>
         <label for="whattheydid">What did they do to you?</label>
         <input type="text" id="whattheydidi" name="whattheydidi"><br>
         <label for="fangspotted">Have you seen my dog fang?</label> YES
