--- a/Head_First_PHP&MySQL/1.1.html
+++ b/Head_First_PHP&MySQL/1.1.html
@@ -20,7 +20,7 @@
         <label for="email">What is your email address?</label>
         <input type="text" name="email" id="email"><br>
         <label for="whenithappened"> When did it happen? </label>
-        <input type="text" id="whenithapen" name="whenithappen"><br>
+        <input type="text" id="whenithapened" name="whenithappened"><br>
         <label for="howlong"> How long ware you gone? </label>
         <input type="text" id="howlong" name="howlong"><br>
         <label for="howmany">How many did you see?</label>
@@ -28,7 +28,7 @@
         <label for="aliendescription">Describe them:</label>
         <input type="text" id="description" name="description"><br>
         <label for="whattheydid">What did they do to you?</label>
-        <input type="text" id="whattheydidi" name="whattheydidi"><br>
+        <input type="text" id="whattheydid" name="whattheydid"><br>
         <label for="fangspotted">Have you seen my dog fang?</label> YES
         <input type="radio" id="fangspotted" name="fangspotted" value="yes"> NO
         <input type="radio" id="fangspotted" name="fangspotted" value="no"><br>
